// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserForm should match a snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UserForm
    email=""
    handleOnChange={[Function]}
    handleOnSubmit={[Function]}
    password=""
    routeId="login"
    showPassword={false}
    togglePasswordVisibility={[Function]}
    username=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <input
          className="user-form__input"
          name="username"
          onChange={[Function]}
          placeholder="Hey stranger, what's your name?"
          required={false}
          style={
                    Object {
                              "display": "none",
                            }
          }
          type="text"
          value=""
/>,
        <h2
          className="user-form__greeting"
          style={
                    Object {
                              "display": "initial",
                            }
          }
>
          Welcome Back!
</h2>,
        <input
          className="user-form__input"
          name="email"
          onChange={[Function]}
          placeholder="email"
          required={true}
          type="email"
          value=""
/>,
        <div
          className="user-form__password-fields"
>
          <input
                    className="password-fields__input"
                    name="password"
                    onChange={[Function]}
                    placeholder="password"
                    required={true}
                    type="password"
                    value=""
          />
          <button
                    className="password-fields__password-toggle-btn"
                    onClick={[Function]}
          >
                    show password
          </button>
</div>,
        <button
          className="user-form__btn user-form__btn--submit"
          type="submit"
>
          Log In
</button>,
      ],
      "className": "user-form",
      "onSubmit": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "user-form__input",
          "name": "username",
          "onChange": [Function],
          "placeholder": "Hey stranger, what's your name?",
          "required": false,
          "style": Object {
            "display": "none",
          },
          "type": "text",
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": "input",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Welcome Back!",
          "className": "user-form__greeting",
          "style": Object {
            "display": "initial",
          },
        },
        "ref": null,
        "rendered": "Welcome Back!",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "user-form__input",
          "name": "email",
          "onChange": [Function],
          "placeholder": "email",
          "required": true,
          "type": "email",
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": "input",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              className="password-fields__input"
              name="password"
              onChange={[Function]}
              placeholder="password"
              required={true}
              type="password"
              value=""
/>,
            <button
              className="password-fields__password-toggle-btn"
              onClick={[Function]}
>
              show password
</button>,
          ],
          "className": "user-form__password-fields",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "password-fields__input",
              "name": "password",
              "onChange": [Function],
              "placeholder": "password",
              "required": true,
              "type": "password",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "show password",
              "className": "password-fields__password-toggle-btn",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "show password",
            "type": "button",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Log In",
          "className": "user-form__btn user-form__btn--submit",
          "type": "submit",
        },
        "ref": null,
        "rendered": "Log In",
        "type": "button",
      },
    ],
    "type": "form",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <input
            className="user-form__input"
            name="username"
            onChange={[Function]}
            placeholder="Hey stranger, what's your name?"
            required={false}
            style={
                        Object {
                                    "display": "none",
                                  }
            }
            type="text"
            value=""
/>,
          <h2
            className="user-form__greeting"
            style={
                        Object {
                                    "display": "initial",
                                  }
            }
>
            Welcome Back!
</h2>,
          <input
            className="user-form__input"
            name="email"
            onChange={[Function]}
            placeholder="email"
            required={true}
            type="email"
            value=""
/>,
          <div
            className="user-form__password-fields"
>
            <input
                        className="password-fields__input"
                        name="password"
                        onChange={[Function]}
                        placeholder="password"
                        required={true}
                        type="password"
                        value=""
            />
            <button
                        className="password-fields__password-toggle-btn"
                        onClick={[Function]}
            >
                        show password
            </button>
</div>,
          <button
            className="user-form__btn user-form__btn--submit"
            type="submit"
>
            Log In
</button>,
        ],
        "className": "user-form",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "user-form__input",
            "name": "username",
            "onChange": [Function],
            "placeholder": "Hey stranger, what's your name?",
            "required": false,
            "style": Object {
              "display": "none",
            },
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Welcome Back!",
            "className": "user-form__greeting",
            "style": Object {
              "display": "initial",
            },
          },
          "ref": null,
          "rendered": "Welcome Back!",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "user-form__input",
            "name": "email",
            "onChange": [Function],
            "placeholder": "email",
            "required": true,
            "type": "email",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                className="password-fields__input"
                name="password"
                onChange={[Function]}
                placeholder="password"
                required={true}
                type="password"
                value=""
/>,
              <button
                className="password-fields__password-toggle-btn"
                onClick={[Function]}
>
                show password
</button>,
            ],
            "className": "user-form__password-fields",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "password-fields__input",
                "name": "password",
                "onChange": [Function],
                "placeholder": "password",
                "required": true,
                "type": "password",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "show password",
                "className": "password-fields__password-toggle-btn",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "show password",
              "type": "button",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Log In",
            "className": "user-form__btn user-form__btn--submit",
            "type": "submit",
          },
          "ref": null,
          "rendered": "Log In",
          "type": "button",
        },
      ],
      "type": "form",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`UserForm should match a snapshot with the route "signup" 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UserForm
    email=""
    handleOnChange={[Function]}
    handleOnSubmit={[Function]}
    password=""
    routeId="signup"
    showPassword={true}
    togglePasswordVisibility={[Function]}
    username=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <input
          className="user-form__input"
          name="username"
          onChange={[Function]}
          placeholder="Hey stranger, what's your name?"
          required={true}
          style={
                    Object {
                              "display": "initial",
                            }
          }
          type="text"
          value=""
/>,
        <h2
          className="user-form__greeting"
          style={
                    Object {
                              "display": "none",
                            }
          }
>
          Welcome Back!
</h2>,
        <input
          className="user-form__input"
          name="email"
          onChange={[Function]}
          placeholder="email"
          required={true}
          type="email"
          value=""
/>,
        <div
          className="user-form__password-fields"
>
          <input
                    className="password-fields__input"
                    name="password"
                    onChange={[Function]}
                    placeholder="password"
                    required={true}
                    type="text"
                    value=""
          />
          <button
                    className="password-fields__password-toggle-btn"
                    onClick={[Function]}
          >
                    hide password
          </button>
</div>,
        <button
          className="user-form__btn user-form__btn--submit"
          type="submit"
>
          Sign Up
</button>,
      ],
      "className": "user-form",
      "onSubmit": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "user-form__input",
          "name": "username",
          "onChange": [Function],
          "placeholder": "Hey stranger, what's your name?",
          "required": true,
          "style": Object {
            "display": "initial",
          },
          "type": "text",
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": "input",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Welcome Back!",
          "className": "user-form__greeting",
          "style": Object {
            "display": "none",
          },
        },
        "ref": null,
        "rendered": "Welcome Back!",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "user-form__input",
          "name": "email",
          "onChange": [Function],
          "placeholder": "email",
          "required": true,
          "type": "email",
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": "input",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              className="password-fields__input"
              name="password"
              onChange={[Function]}
              placeholder="password"
              required={true}
              type="text"
              value=""
/>,
            <button
              className="password-fields__password-toggle-btn"
              onClick={[Function]}
>
              hide password
</button>,
          ],
          "className": "user-form__password-fields",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "password-fields__input",
              "name": "password",
              "onChange": [Function],
              "placeholder": "password",
              "required": true,
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "hide password",
              "className": "password-fields__password-toggle-btn",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "hide password",
            "type": "button",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Sign Up",
          "className": "user-form__btn user-form__btn--submit",
          "type": "submit",
        },
        "ref": null,
        "rendered": "Sign Up",
        "type": "button",
      },
    ],
    "type": "form",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <input
            className="user-form__input"
            name="username"
            onChange={[Function]}
            placeholder="Hey stranger, what's your name?"
            required={true}
            style={
                        Object {
                                    "display": "initial",
                                  }
            }
            type="text"
            value=""
/>,
          <h2
            className="user-form__greeting"
            style={
                        Object {
                                    "display": "none",
                                  }
            }
>
            Welcome Back!
</h2>,
          <input
            className="user-form__input"
            name="email"
            onChange={[Function]}
            placeholder="email"
            required={true}
            type="email"
            value=""
/>,
          <div
            className="user-form__password-fields"
>
            <input
                        className="password-fields__input"
                        name="password"
                        onChange={[Function]}
                        placeholder="password"
                        required={true}
                        type="text"
                        value=""
            />
            <button
                        className="password-fields__password-toggle-btn"
                        onClick={[Function]}
            >
                        hide password
            </button>
</div>,
          <button
            className="user-form__btn user-form__btn--submit"
            type="submit"
>
            Sign Up
</button>,
        ],
        "className": "user-form",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "user-form__input",
            "name": "username",
            "onChange": [Function],
            "placeholder": "Hey stranger, what's your name?",
            "required": true,
            "style": Object {
              "display": "initial",
            },
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Welcome Back!",
            "className": "user-form__greeting",
            "style": Object {
              "display": "none",
            },
          },
          "ref": null,
          "rendered": "Welcome Back!",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "user-form__input",
            "name": "email",
            "onChange": [Function],
            "placeholder": "email",
            "required": true,
            "type": "email",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                className="password-fields__input"
                name="password"
                onChange={[Function]}
                placeholder="password"
                required={true}
                type="text"
                value=""
/>,
              <button
                className="password-fields__password-toggle-btn"
                onClick={[Function]}
>
                hide password
</button>,
            ],
            "className": "user-form__password-fields",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "password-fields__input",
                "name": "password",
                "onChange": [Function],
                "placeholder": "password",
                "required": true,
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "hide password",
                "className": "password-fields__password-toggle-btn",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "hide password",
              "type": "button",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Sign Up",
            "className": "user-form__btn user-form__btn--submit",
            "type": "submit",
          },
          "ref": null,
          "rendered": "Sign Up",
          "type": "button",
        },
      ],
      "type": "form",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
